# This file documents the revision history for Perl extension Catalyst.

5.80006 2009-06-29 23:37:47

  Bug fixes:
        - Revert change to URL encode things passed into $c->uri_for
          Args and CaptureArgs as this causes breakage to pre-existing
          applications (t0m).
        - Remove use of Test::MockObject as it doesn't install from CPAN
          in some environments (t0m).
        - Remove use of dclone to deep copy configs and replace with
          Catalyst::Utils::merge_hashes which has the same effect, of
          ensuring child classes don't inherit their parent's config,
          except works correctly with closures (t0m).
        - Add Class::C3::reinitialize into Catalyst::Test to avoid weird
          bugs in ctx_request (bokutin in RT#46459)
        - Fix issues with _parse_PathPrefix_attr method in Catalyst::Controller
          (jasonk in RT#42816)

  New features:
        - Use ~ as prefix for plugins or action classes which are located in
          MyApp::Plugin / MyApp::Action (mo)
        - Controller methods without attributes are now considered actions if
          they are specified in config->{action(s)} (mo)
        - Add Catalyst::Component::ContextClosure as an easy way to create code
          references, that close over the context, without creating leaks
          (Florian Ragwitz).

   Refactoring / cleanups:
        - Clean namespaces in Catalyst::Exception* (Florian Ragwitz).
        - Turn Catalyst::Exception into an actual class and make the throw
          method create instances of it. They can still be used as normal
          strings, as before, as they are overloaded to stringify to their
          error message (Florian Ragwitz).
        - Add a rethrow method to Catalyst::Exception (Florian Ragwitz).
        - Add Catalyst::Exception::Detach and ::Go, and refactor detach() and
          go() to use them instead of magic, global strings (Florian Ragwitz).
          Fixes RT#47366